Etch-a-Sketch webserver test

--- a/index.html
+++ b/index.html
@@ -2,19 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ESP32 WebServer</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <title>The Odin Project - Etch-A-Sketch</title>
+  <style>
+    * {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin:0;
+  padding:0;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+
+.grid-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid{
+  display: flex;
+  flex-wrap: wrap;
+  width: 500px;
+  height: 500px;
+  border:2px solid black;
+  border-radius: 16px;  
+  padding: 10px
+}
+
+.grid-cell{
+  height: 100%;
+  aspect-ratio: 1;
+  display: flex;
+  transition: 0.2s ease-out;
+  border-radius: 100%;
+  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.25));
+}
+.grid-row{
+  display: flex; 
+  width: 100%;
+}
+
+
+.container{
+  display: flex;
+  align-items: center;
+  border:2px solid black;
+  border-radius: 16px;  
+  padding: 10px
+}
+.container>div{
+  margin: 10px;
+  text-align: center;
+}
+
+#colorPicker{
+  width: 100px;
+  height: 100px;
+  border:2px solid black;
+  margin: 20px;
+}
+  </style>
 </head>
 <body>
+  <h1>Etch-A-Sketch</h1>
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>ESP32 WebServer</h1>
-        <p>LED1: <a href="led1on">ON</a> | <a href="led1off">OFF</a></p>
-        <p>LED2: <a href="led2on">ON</a> | <a href="led2off">OFF</a></p>
-      </div>
+    <div class="grid"></div>
+    <div>
+      <input type="color" id="colorPicker">
+      <h2>Current Color:</h2>
+      <h3 id="colorIndicator"></h3>
+      <br>
+      <input type="range" min="4" max="64" value="16" id="sizeSelector">
+      <button id="createGrid">Create Grid</button>
+      <h1>GRID SIZE <h2 class="gridSizeNumber">0</h2></h1>
     </div>
+    <script src="script.js"></script>
   </div>
 </body>
+<script>
+  const gridSliderSelector = document.querySelector('#sizeSelector');
+const createGridButton = document.querySelector('#createGrid');
+const gridSliderValue = document.querySelector('.gridSizeNumber');
+const gridContainer = document.querySelector('.grid')
+const colorPicker = document.querySelector('#colorPicker');
+const colorIndicator = document.querySelector('#colorIndicator');
+
+gridSliderSelector.addEventListener('mousemove', () => {
+  gridSliderValue.innerHTML = gridSliderSelector.value + ' x ' + gridSliderSelector.value;
+});
+
+createGridButton.addEventListener('click', () => {
+  updateGrid(gridSliderSelector.value);
+});
+
+const gridElem = document.createElement('div')
+gridElem.classList.add('grid-cell');
+const gridRow = document.createElement('div')
+gridRow.classList.add('grid-row');
+
+
+
+const updateGrid = (gridSize) => {
+  gridSliderValue.innerHTML = gridSize + ' x ' + gridSize;
+  gridContainer.innerHTML = '';
+  for (let i = 0; i < gridSize; i++) {
+    gridContainer.insertAdjacentElement('beforeend', gridRow.cloneNode());
+    for (let j = 0; j < gridSize; j++) {
+      let gridRow = document.querySelector('.grid-row:last-child');
+      gridRow.insertAdjacentElement('beforeend', gridElem.cloneNode());
+    }
+  }
+  let gridCells = document.querySelectorAll('.grid-cell');
+  gridCells.forEach((gridCell) => {
+    gridCell.addEventListener('mouseover', (e) => {
+      if (e.buttons == 1) {
+        gridCell.style.backgroundColor = colorPicker.value;
+
+      }
+    });
+  });
+};
+
+
+colorPicker.addEventListener('change', () => {
+  colorIndicator.innerHTML = colorPicker.value.toUpperCase()
+  if (colorPicker.value.slice(1) < '303030') {
+    colorIndicator.style.backgroundColor = 'white';
+  }
+  else {
+    colorIndicator.style.backgroundColor = colorPicker.value;
+  }
+});
+
+updateGrid(16);
+</script>
 </html>
